--- a/app/src/main/res/layout/activity_main_description.xml
+++ b/app/src/main/res/layout/activity_main_description.xml
@@ -68,5 +68,29 @@
         app:layout_constraintTop_toBottomOf="@+id/ingredients_lbl"
         android:text="@string/black_beans_ingredients"/>
 
+    <TextView
+        android:id="@+id/description_lbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/description"
+        android:textColor="@android:color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/photo"/>
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/description_lbl"
+        android:text="@string/black_beans_description"/>
 
 </android.support.constraint.ConstraintLayout>
