--- a/app/src/main/res/layout/activity_main_ingredients.xml
+++ b/app/src/main/res/layout/activity_main_ingredients.xml
@@ -14,13 +14,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="@string/black_beans_title"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/black_beans_title"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/photo"
@@ -62,11 +62,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:text="@string/black_beans_ingredients"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ingredients_lbl"
-        android:text="@string/black_beans_ingredients"/>
+        app:layout_constraintTop_toBottomOf="@+id/ingredients_lbl"/>
 
 
 </android.support.constraint.ConstraintLayout>
