--- a/app/src/main/res/layout/activity_main_buttons.xml
+++ b/app/src/main/res/layout/activity_main_buttons.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.tbadg.constraintlayouttalk.MainActivity">
+    tools:context="org.tbadg.constraintlayouttalk.MainActivity"
+    tools:ignore="ContentDescription">
 
     <TextView
         android:id="@+id/title"
@@ -14,13 +15,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="@string/black_beans_title"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/black_beans_title"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/photo"
@@ -62,11 +63,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:text="@string/black_beans_ingredients"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ingredients_lbl"
-        android:text="@string/black_beans_ingredients"/>
+        app:layout_constraintTop_toBottomOf="@+id/ingredients_lbl"/>
 
     <TextView
         android:id="@+id/description_lbl"
@@ -88,10 +89,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:text="@string/black_beans_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/description_lbl"
-        android:text="@string/black_beans_description"/>
+        app:layout_constraintTop_toBottomOf="@+id/description_lbl"/>
 
     <TextView
         android:id="@+id/instructions_lbl"
@@ -113,11 +114,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:text="@string/black_beans_instructions"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/instructions_lbl"
-        android:text="@string/black_beans_instructions"/>
+        app:layout_constraintTop_toBottomOf="@+id/instructions_lbl"/>
 
     <CheckBox
         android:id="@+id/made_it"
