--- a/app/src/main/res/layout/activity_main_instructions.xml
+++ b/app/src/main/res/layout/activity_main_instructions.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.tbadg.constraintlayouttalk.MainActivity">
+    tools:context="org.tbadg.constraintlayouttalk.MainActivity"
+    tools:ignore="ContentDescription">
 
     <TextView
         android:id="@+id/title"
