--- a/app/src/main/res/layout/activity_main_title_and_image.xml
+++ b/app/src/main/res/layout/activity_main_title_and_image.xml
@@ -25,12 +25,11 @@
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/black_beans"/>
