Add tweaks to facilitate demo

--- a/app/src/main/res/layout/activity_main_done.xml
+++ b/app/src/main/res/layout/activity_main_done.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,7 +28,6 @@
         android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/black_beans"/>
@@ -66,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.4"/>
+        app:layout_constraintGuide_percent="0.42"/>
 
     <TextView
         android:id="@+id/ingredients_lbl"
@@ -78,7 +76,6 @@
         android:text="@string/ingredients"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photo"/>
 
@@ -153,7 +150,6 @@
         android:text="@string/made_it"
         app:layout_constraintBaseline_toBaselineOf="@+id/notes"
         app:layout_constraintEnd_toStartOf="@+id/liked_it"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <CheckBox
@@ -164,7 +160,6 @@
         android:text="@string/liked_it"
         app:layout_constraintBaseline_toBaselineOf="@+id/notes"
         app:layout_constraintEnd_toStartOf="@+id/notes"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/made_it"/>
 
     <Button
@@ -178,25 +173,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/instructions"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/liked_it"
         tools:layout_editor_absoluteX="222dp"/>
-
-    <!--<ImageView-->
-    <!--android:id="@+id/andy"-->
-    <!--android:layout_width="50dp"-->
-    <!--android:layout_height="0dp"-->
-    <!--android:layout_marginBottom="8dp"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="8dp"-->
-    <!--android:scaleType="fitXY"-->
-    <!--app:layout_constraintBottom_toBottomOf="@+id/photo"-->
-    <!--app:layout_constraintDimensionRatio="h,1:2"-->
-    <!--app:layout_constraintEnd_toEndOf="@+id/photo"-->
-    <!--app:layout_constraintStart_toStartOf="@+id/photo"-->
-    <!--app:layout_constraintTop_toTopOf="@+id/photo"-->
-    <!--app:layout_constraintVertical_bias="0.5"-->
-    <!--app:srcCompat="@drawable/andy"/>-->
 
 </android.support.constraint.ConstraintLayout>
