--- a/app/src/main/res/layout/activity_main_instructions.xml
+++ b/app/src/main/res/layout/activity_main_instructions.xml
@@ -25,12 +25,11 @@
 
     <ImageView
         android:id="@+id/photo"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/black_beans"/>
@@ -40,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.4"/>
+        app:layout_constraintGuide_percent="0.42"/>
 
     <TextView
         android:id="@+id/ingredients_lbl"
@@ -52,7 +51,6 @@
         android:text="@string/ingredients"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photo"/>
 
@@ -62,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:text="@string/black_beans_ingredients"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
