--- a/app/src/main/res/layout/activity_main_done.xml
+++ b/app/src/main/res/layout/activity_main_done.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="org.tbadg.constraintlayouttalk.MainActivity"
     tools:ignore="ContentDescription">
 
     <TextView
@@ -36,7 +38,6 @@
         android:id="@+id/previous"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -49,7 +50,6 @@
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="188dp"
-        android:layout_gravity="bottom|end"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
@@ -57,7 +57,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/photo"/>
-
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -147,16 +146,20 @@
         android:id="@+id/made_it"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
         android:text="@string/made_it"
         app:layout_constraintBaseline_toBaselineOf="@+id/notes"
         app:layout_constraintEnd_toStartOf="@+id/liked_it"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <CheckBox
         android:id="@+id/liked_it"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="31dp"
         android:text="@string/liked_it"
         app:layout_constraintBaseline_toBaselineOf="@+id/notes"
         app:layout_constraintEnd_toStartOf="@+id/notes"
@@ -167,13 +170,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="31dp"
         android:text="@string/notes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/instructions"
-        app:layout_constraintStart_toEndOf="@+id/liked_it"
-        tools:layout_editor_absoluteX="222dp"/>
+        app:layout_constraintStart_toEndOf="@+id/liked_it"/>
+
+    <ImageView
+        android:id="@+id/andy"
+        android:layout_width="75dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="@+id/photo"
+        app:layout_constraintDimensionRatio="1:3"
+        app:layout_constraintEnd_toEndOf="@+id/photo"
+        app:layout_constraintStart_toStartOf="@+id/photo"
+        app:layout_constraintTop_toTopOf="@+id/photo"
+        app:srcCompat="@drawable/andy"/>
 
 </android.support.constraint.ConstraintLayout>
